--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.18.2",
     "face-api.js": "^0.22.2",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^10.15.1",
     "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
